data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_676.wast
;; 7. **Test Description 7**:    - **Test**: Loop containing a `br_if` relying on a boolean flag toggled by instructions within the loop.    - **Constraint**: Verify that the loop depends accurately on the state of the boolean flag.    - **Reason**: Faulty evaluation may result in the flag not correctly controlling the loop.

(assert_invalid
  (module
    (func $test
      (local $flag i32)
      (local.set $flag (i32.const 1)) ;; Initialize flag
      (loop $loop_label (result i32)
        (local.set $flag (i32.xor (local.get $flag) (i32.const 1))) ;; Toggle flag
        (br_if $loop_label (local.get $flag)) ;; Branch based on flag
        (i32.const 0) ;; Type mismatch if this constant is reached
      )
    )
  )
  "type mismatch"
)